# Contract-AI-System-

./: .dockerignore  .env.docker  .env.example  .env.production.example  .flake8  .gitignore  CONTRACT_AI_SYSTEM_SPECIFICATION.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  GITHUB_ACTIONS_SETUP.md  INTEGRATION_GUIDE.md  LOGIN_TROUBLESHOOTING.md  QUICKSTART.md  QUICK_START.md  README.md  README_DOCKER.md  README_LOGIN.md  SETUP_RU.md  START_HERE_RU.md  TESTING_GUIDE.md  TESTING_REPORT.md  _app_pages_legacy.py  alembic.ini  app.py  app_admin.py  app_pages_improved.py  backup.sh  claude.md  conftest.py  current.md  deploy.sh  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  (+20 more)
.streamlit/: config.toml
admin/: streamlit_dashboard.py  Главная.py
alembic/: README_MIGRATIONS.md  env.py
config/: settings.py
data/: semantic_edges.json
database/: init.sql  init_users.py  seed_users.py
docs/: IDP_INTEGRATION_CONCEPT.md
frontend/: .dockerignore  Dockerfile  jest.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
integration/: nextjs-component.tsx
nginx/: generate-cert.sh  nginx.conf
scripts/: build_article_texts.py  check_blind_except.py  kb_dedup_editions.py  kb_embed.py  kb_embed_batched.sh  kb_embed_watchdog.sh  kb_fts_build.py  kb_reembed_all.sh  kb_relink.py  kb_update.sh  retrain_risk_model.py  rotate_secrets.py
src/: main.py
tests/: conftest.py  script_auth_implementation.py  (+36 more)
(+469 files in other folders)
