[project]
name = "contract-ai-system"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-x",
]
markers = [
    "slow: marks tests that take > 10s (deselect with -m 'not slow')",
    "integration: marks tests requiring external services (DB, LLM, etc.)",
    "unit: marks pure unit tests with no external dependencies",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/core/graph_rag/*",
    "*/migrations/*",
    "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
